--- a/Teams/Red Team/C2.md
+++ b/Teams/Red Team/C2.md
@@ -35,7 +35,7 @@ As we already know Windows PE files are not the only way to execute code on a sy
 
 # Modules
 ## Post Exploitation Modules
-Post exploitation modules are simply modules that deal with anything after the initial point of compromise, this could be as simple as running [[BloodHound|SharpHound.ps1]] to find paths of lateral movement, or it could be as complex as dumping LSASS and parsing credentials in memory
+Post exploitation modules are simply modules that deal with anything after the initial point of compromise, this could be as simple as running [[Bloodhound|SharpHound.ps1]] to find paths of lateral movement, or it could be as complex as dumping LSASS and parsing credentials in memory
 
 ## Pivoting Modules
 One of the last major components of a C2 framework is its pivoting modules, making it easier to access restricted network segments withing the C2 framework. If we have Administrative access on a system, we may be able to open up an "SMB Beacon", which can enable a machine to act as a proxy via the SMB protocol. This may allow machines in a a restricted network segment to communicate with our C2 server.
